tests/invalid/generic_instantiate_requires_native_or_export.wio
@Instantiate(i32)
fn Identity<T>(value: T) -> T {
    return value;
}

fn Entry() -> i32 {
    return 0;
}
